# stock-mcp

./: .gitignore  DEPLOY.md  README.md  WORKFLOW_V2_README.md  main.py  mcp-config.json  pyproject.toml  render.yaml  stock_rating_workflow_v3.py  stock_rating_workflow_v5.py  system_prompt.md  test.py  test_sharpe.py  workflow_example.py
