[project]
name = "stock-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.1",
    "isort>=7.0.0",
    "mcp",
    "numpy",
    "openai-agents>=0.6.1",
    "pandas",
    "ruff",
    "scipy>=1.11.0",
    "uvicorn",
    "yfinance",
]
